Fix HTML structure and add WhatsApp button

--- a/inde.html
+++ b/inde.html
@@ -67,6 +67,20 @@
             padding: 18px;
             font-size: 14px;
         }
+<!-- Botón flotante de WhatsApp con ícono oficial -->
+<a href="https://wa.me/523321072889" target="_blank" 
+   style="
+       position: fixed;
+       width: 60px;
+       height: 60px;
+       bottom: 20px;
+       right: 20px;
+       z-index: 1000;
+   ">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+         alt="WhatsApp" 
+         style="width: 100%; height: 100%; border-radius: 50%; box-shadow: 2px 2px 5px rgba(0,0,0,0.3);">
+</a>
     </style>
 </head>
 <body>
@@ -166,6 +180,40 @@
         Atención en todo México
     </p>
 </footer>
-
+<!-- Botón flotante de WhatsApp con ícono oficial -->
+<a href="https://wa.me/523321072889" target="_blank" 
+   style="
+       position: fixed;
+       width: 60px;
+       height: 60px;
+       bottom: 20px;
+       right: 20px;
+       z-index: 1000;
+   ">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+         alt="WhatsApp" 
+         style="width: 100%; height: 100%; border-radius: 50%; box-shadow: 2px 2px 5px rgba(0,0,0,0.3);">
+</a>
+<!-- Botón flotante de WhatsApp animado -->
+<a href="https://wa.me/523321072889" target="_blank"
+   style="
+       position: fixed;
+       width: 60px;
+       height: 60px;
+       bottom: 20px;
+       right: 20px;
+       z-index: 1000;
+       animation: whatsapp-pulse 2s infinite;
+   ">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg"
+         alt="WhatsApp"
+         style="
+             width: 100%;
+             height: 100%;
+             border-radius: 50%;
+             background-color: #25D366;
+             padding: 10px;
+         ">
+</a>
 </body>
 </html>
