--- a/inde.html
+++ b/inde.html
@@ -81,7 +81,20 @@
          alt="WhatsApp" 
          style="width: 100%; height: 100%; border-radius: 50%; box-shadow: 2px 2px 5px rgba(0,0,0,0.3);">
 </a>
-    </style>
+@keyframes whatsapp-pulse {
+    0% {
+        transform: scale(1);
+        box-shadow: 0 0 0 0 rgba(37, 211, 102, 0.7);
+    }
+    70% {
+        transform: scale(1.1);
+        box-shadow: 0 0 0 15px rgba(37, 211, 102, 0);
+    }
+    100% {
+        transform: scale(1);
+        box-shadow: 0 0 0 0 rgba(37, 211, 102, 0);
+    }
+}    </style>
 </head>
 <body>
 
@@ -217,3 +230,4 @@
 </a>
 </body>
 </html>
+
